--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 
 {
-  "name": "Pakizə",
+  "name": "Bot:D",
   "description": "Azərbaycanca olan qrup idarə botu!",
   "keywords": [
     "telegram",
@@ -9,7 +9,7 @@
     "manager",
     "3"
   ],
-  "repository": "hhttps://github.com/Mensimov/Marie-Azerbaijan",
+  "repository": "hhttps://github.com/muko631/Marie-Azerbaijan",
   "env": {
     "ENV": {
       "description": "Setting this to ANYTHING will enable env variables",
@@ -25,7 +25,7 @@
     },
     "OWNER_USERNAME": {
       "description": "Your username",
-      "value": "rihad"
+      "value": "Murad"
     },
     "WEBHOOK": {
       "description": "Setting this to ANYTHING will enable webhooks when in env mode messages",
