--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
     "manager",
     "3"
   ],
-  "repository": "hhttps://github.com/Muko631/Marie-Azerbaijan",
+  "repository": "https://github.com/Muko631/Marie-Azerbaijan",
   "env": {
     "ENV": {
       "description": "Setting this to ANYTHING will enable env variables",
