--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
+
 {
-  "name": "Pakizə",
-  "description": "Azərbaycanca olan qrup idarə botu!",
+  "name": "DtoBotAZ",
+  "description": "Telegram qrup idarə edicisi.",
   "keywords": [
     "telegram",
     "best",
@@ -8,71 +9,71 @@
     "manager",
     "3"
   ],
-  "repository": "https://github.com/Muko631/Marie-Azerbaijan",
+  "repository": "https://github.com/muko631/Marie-Azerbaijan",
   "env": {
     "ENV": {
-      "description": "Setting this to ANYTHING will enable env variables",
+      "description": "ANYTHING olaraq qalmağı tövsiyyə olunur",
       "value": "ANYTHING"
     },
     "TOKEN": {
-      "description": "Your bot token, as a string.",
+      "description": "Sizin Telegram bot token.",
       "value": ""
     },
     "OWNER_ID": {
-      "description": "An integer of consisting of your owner ID",
-      "value": "1176737052"
+      "description": "Botun sahibinin ID nömrəsi",
+      "value": "683538773"
     },
     "OWNER_USERNAME": {
-      "description": "Your username",
-      "value": "rihad"
+      "description": "Sizin istifadəçi adı",
+      "value": "murad"
     },
     "WEBHOOK": {
-      "description": "Setting this to ANYTHING will enable webhooks when in env mode messages",
+      "description": "ANYTHING olaraq qalmağı tövsiyyə olunur",
       "value": "ANYTHING"
     },
     "URL": {
-      "description": "The Heroku App URL similar to https://<appname>.herokuapp.com/",
+      "description": "Heroku URL misal üçün https://<sizin-proqram-adı>.herokuapp.com/",
       "value": ""
     },
     "MESSAGE_DUMP": {
-      "description": "optional: a chat where your replied saved messages are stored, to stop people deleting their old",
+      "description": "Müəyyən LOG-ların saxlanıldığı Chat ID",
       "value": "-1007777777777"
     },
     "SUDO_USERS": {
-      "description": "A space separated list of user_ids which should be considered sudo users",
-      "value": "1173233703"
+      "description": "Sudo (admin) istifadəçi ID-ləri",
+      "value": "254318997 683538773 570400686 466337795"
     },
     "SUPPORT_USERS": {
-      "description": "A space separated list of user_ids which should be considered support users (can gban/ungban, nothing else)",
-      "value": "1176737052"
+      "description": "Global ban verə biləcək istifadəçilərin ID-ləri",
+      "value": "254318997 683538773 570400686 466337795"
     },
     "WHITELIST_USERS": {
-      "description": "A space separated list of user_ids which should be considered whitelisted - they can't be banned.",
-      "value": "1176737052"
+      "description": "Ağ list-də olan istifadəçilərin siyahısı (bu sayıda olan insanlar heç bir qrupda ban ola bilməz və ya susturula bilməz!)",
+      "value": "254318997 683538773 570400686 466337795"
     },
     "DONATION_LINK": {
-      "description": "Optional: link where you would like to receive donations.",
-      "value": "https://www.paypal.me/Your_id_here"
+      "description": "Sizə pul bağışlamaq istəyən insanlara göndəriləcək link. (PayPal hesabı olmayada bilər)",
+      "value": "https://www.paypal.me/sizin-paypal-hesabı"
     },
     "PORT": {
-      "description": "Port to use for your webhooks",
+      "description": "Webhook üçün port",
       "value": "8443"
     },
     "DEL_CMDS": {
-      "description": "Whether to delete commands from users which don't have rights to use that command",
+      "description": "Əgər hər hansı istifadəçi onun üçün nəzərdə tutulan komandadan istifadə etsə həmən komanda silinsin? (False etsəniz silinməyəcək.)",
       "value": "True"
     },
     "STRICT_GBAN": {
-      "description": "Enforce gbans across new groups as well as old groups. When a gbanned user talks, he will be banned.",
+      "description": "Gban olan insanlar digər qruplarda danışa bilsinlər? (False etsəniz danışa biləcəklər.)",
       "value": "True"
     },
     "ALLOW_EXCL": {
-      "description": "Whether to allow using exclamation marks ! for commands as well as /.",
+      "description": "Komanda yazdığınızda / yerinə ! işarəsi qoyulsa qəbul edilsin? (False olsa qəbul edilməyəcək)",
       "value": "True"
     },
     "BAN_STICKER": {
-      "description": "Which sticker to use when banning people. Use https://telegram.dog/ShowJsonBot to get the file_id",
-      "value": "CAACAgEAAxkBAAEGzxZfr5tPVp5709q4u8kJCPXKwFtCDwAC6w8AApl_iAJwiDaS3yYMOh4E"
+      "description": "Qadağan olunan stickerlər",
+      "value": "CAADBAAD6AMAAkJ_EQNu_RjOszbmnxYE"
     }
   },
   "addons": [
